# velox

./: CMakeLists.txt  CONTRIBUTING.md
.github/workflows/: experimental.yml  linux-build.yml  scheduled.yml
CMake/: Findgrpc.cmake
CMake/resolve_dependency_modules/: boringssl.cmake  cares.cmake  curl.cmake  grpc.cmake
scripts/: setup-centos8.sh  setup-centos9.sh  setup-ubuntu.sh  spark-container.dockerfile
velox/: CMakeLists.txt
velox/connectors/: Connector.h
velox/connectors/hive/: HiveConfig.cpp  HiveConnectorSplit.h  HiveConnectorUtil.cpp  HiveDataSource.cpp  HiveDataSource.h  SplitReader.cpp  SplitReader.h
velox/core/: PlanNode.cpp  PlanNode.h  QueryConfig.h
velox/docs/: configs.rst
velox/docs/functions/presto/: conversion.rst
velox/docs/functions/spark/: decimal.rst  string.rst
velox/dwio/common/: CachedBufferedInput.cpp  CachedBufferedInput.h  DirectBufferedInput.cpp  DirectBufferedInput.h  DirectInputStream.cpp  Options.h  Reader.h  SelectiveStructColumnReader.cpp
velox/dwio/dwrf/reader/: DwrfReader.cpp  DwrfReader.h  ReaderBase.h  SelectiveDecimalColumnReader.cpp  SelectiveDecimalColumnReader.h
velox/dwio/dwrf/test/: E2EFilterTest.cpp
velox/dwio/parquet/reader/: PageReader.cpp  ParquetReader.cpp  ParquetReader.h
velox/dwio/parquet/tests/examples/: id.parquet  non_ascii.parquet  row_group.parquet
velox/dwio/parquet/tests/reader/: CMakeLists.txt  ParquetTableScanTest.cpp
velox/dwio/parquet/writer/: Writer.h
velox/exec/: AggregateCompanionSignatures.cpp  ArrowStream.cpp  CMakeLists.txt  Driver.cpp  LocalPlanner.cpp  TableScan.cpp  TableScan.h
velox/exec/fuzzer/: AggregationFuzzer.cpp  AggregationFuzzer.h  AggregationFuzzerBase.cpp  AggregationFuzzerBase.h  AggregationFuzzerOptions.h  AggregationFuzzerRunner.h  CMakeLists.txt  PrestoQueryRunner.cpp  PrestoQueryRunner.h  QueryTranslator.cpp  QueryTranslator.h  WindowFuzzer.cpp  WindowFuzzer.h  WindowFuzzerRunner.h
velox/exec/tests/: PrestoQueryRunnerTest.cpp  TableScanTest.cpp
velox/exec/tests/data/: decimal.orc
velox/expression/: CMakeLists.txt  CastExpr-inl.h  CastExpr.cpp  CastHooks.h  DecimalAvgResultGenerator.cpp  DecimalAvgResultGenerator.h  ExprToSubfieldFilter.cpp  PrestoCastHooks.cpp  PrestoCastHooks.h  SignatureBinder.cpp  VectorFunction.cpp
velox/expression/fuzzer/: ArgumentTypeFuzzer.cpp  ArgumentTypeFuzzer.h  DecimalArgGeneratorBase.h  ExpressionFuzzer.cpp  ExpressionFuzzerTest.cpp  ExpressionFuzzerVerifier.cpp  ExpressionFuzzerVerifier.h  FuzzerRunner.cpp
velox/expression/tests/: ArgumentTypeFuzzerTest.cpp  CastExprTest.cpp  ExpressionFuzzer.cpp  ExpressionFuzzer.h  ExpressionVerifier.cpp  SparkExpressionFuzzerTest.cpp
velox/expression/tests/utils/: ArgumentTypeFuzzer.cpp  ArgumentTypeFuzzer.h
velox/functions/: FunctionRegistry.cpp
velox/functions/lib/aggregates/: DecimalAggregate.h
velox/functions/lib/string/: StringImpl.h
velox/functions/prestosql/: ArrayIntersectExcept.cpp  CMakeLists.txt
velox/functions/prestosql/aggregates/: AverageAggregate.cpp  CMakeLists.txt  CountAggregate.cpp  CountAggregate.h
velox/functions/prestosql/registration/: ComparisonFunctionsRegistration.cpp
velox/functions/prestosql/tests/: ArgGeneratorTest.cpp  DecimalArithmeticTest.cpp  RoundTest.cpp
velox/functions/prestosql/tests/utils/: FunctionBaseTest.cpp  FunctionBaseTest.h
velox/functions/prestosql/types/tests/: HyperLogLogTypeTest.cpp  JsonTypeTest.cpp  TimestampWithTimeZoneTypeTest.cpp
velox/functions/sparksql/: Arithmetic.h  CMakeLists.txt  DecimalArithmetic.cpp  MakeTimestamp.cpp  Register.cpp  RegisterArithmetic.cpp  SplitFunctions.cpp  String.h  UnscaledValueFunction.cpp
velox/functions/sparksql/aggregates/: AverageAggregate.cpp  FirstLastAggregate.cpp  SumAggregate.cpp
velox/functions/sparksql/aggregates/tests/: AverageAggregationTest.cpp  MinMaxByAggregationTest.cpp
velox/functions/sparksql/benchmarks/: CMakeLists.txt  MaskBenchmark.cpp
velox/functions/sparksql/fuzzer/: CMakeLists.txt  SparkAggregationFuzzerTest.cpp  SparkQueryRunner.cpp  SparkQueryRunner.h  SparkQueryTranslator.cpp  SparkQueryTranslator.h
velox/functions/sparksql/fuzzer/tests/: CMakeLists.txt  SparkQueryRunnerTest.cpp
velox/functions/sparksql/specialforms/: DecimalRound.cpp  SparkCastHooks.cpp  SparkCastHooks.h
velox/functions/sparksql/tests/: ArgGeneratorTest.cpp  ArithmeticTest.cpp  ArrayIntersectExceptTest.cpp  CMakeLists.txt  SparkCastExprTest.cpp  SplitFunctionsTest.cpp  StringTest.cpp
velox/substrait/: CMakeLists.txt  SubstraitToVeloxExpr.cpp  SubstraitToVeloxExpr.h  SubstraitToVeloxPlan.cpp  SubstraitToVeloxPlan.h  SubstraitToVeloxPlanValidator.cpp  SubstraitToVeloxPlanValidator.h  SubstraitUtils.cpp  SubstraitUtils.h  TypeUtils.cpp
velox/substrait/proto/substrait/: algebra.proto
velox/substrait/tests/: PlanConversionTest.cpp  q1_first.json  q6_first.json
velox/type/: Conversions.h  DecimalUtil.h  Subfield.h  Timestamp.cpp  Timestamp.h  Tokenizer.cpp  Type.cpp  Type.h
velox/type/parser/: ParserUtil.cpp  ParserUtil.h
velox/type/parser/tests/: CMakeLists.txt  ParserUtilTest.cpp
velox/type/tests/: DecimalTest.cpp  SubfieldTest.cpp  TimestampTest.cpp  TypeTest.cpp
velox/vector/arrow/: Bridge.cpp  Bridge.h
velox/vector/arrow/c/: Bridge.cpp
velox/vector/arrow/c/tests/: ArrowBridgeArrayTest.cpp
velox/vector/arrow/tests/: ArrowBridgeArrayTest.cpp
velox/vector/fuzzer/: VectorFuzzer.cpp
